Initial splitting out of QA Lab specific allocation